crates/oxidiris/src/snapshots/oxidiris__snapshots__a_monochrome_terminal_still_shows_everything.snap
---
source: crates/oxidiris/src/snapshots.rs
expression: "text_grid(&a, 80, 24)"
---
┌ oxidiris.md ─────────────────────────┐┌ Text  ·  [Tab] to scroll ────────────┐
│                                      ││# Oxidiris                            │
│                                      ││                                      │
│                                      ││Reading at speed without moving your  │
│                                      ││eyes, which needs a paragraph long    │
│                                      ││enough to wrap.                       │
│                                      ││                                      │
│                                      ││## Keys                               │
│                   v                  ││                                      │
│                  needs               ││- Space plays and pauses              │
│                   ^                  ││- Tab focuses the text panel          │
│                                      ││                                      │
│                                      ││```rust                               │
│                                      ││let anchor = width / 2;               │
│                                      ││```                                   │
│                                      ││                                      │
│                                      ││## Limits                             │
│                                      ││                                      │
│                                      ││Skimming and triage, not a            │
└──────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│speed: 300 WPM (eff. 210)                                    word: 10/42 (22%)│
│[Space] play   [K / Up] speed   [H / Left] seek   [?] help   [q] quit  ##-----│
└──────────────────────────────────────────────────────────────────────────────┘
