crates/oxidiris/src/snapshots/oxidiris__snapshots__emphasis_with_colour_available.snap
---
source: crates/oxidiris/src/snapshots.rs
expression: "style_grid(&a, 80, 24)"
---
................................................................................
................................................................................
................................................................................
................................................................................
.....................................................rrrrr......................
................................................................................
................................................................................
................................................................................
................................................................................
....................A...........................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
