crates/oxidiris/src/snapshots/oxidiris__snapshots__focus_mode_at_forty_by_ten.snap
---
source: crates/oxidiris/src/snapshots.rs
expression: "text_grid(&a, 40, 10)"
---
┌ oxidiris.md ─────────────────────────┐
│                   ▼                  │
│                  needs               │
│                   ▲                  │
│                                      │
└──────────────────────────────────────┘
┌──────────────────────────────────────┐
│speed: 300 WPM (eff. 210) word: 10/42 │
│[Space] play   [K / Up] speed   [H / L│
└──────────────────────────────────────┘
