crates/oxidiris/src/snapshots/oxidiris__snapshots__focus_mode_when_the_reader_asked_for_it.snap
---
source: crates/oxidiris/src/snapshots.rs
expression: "text_grid(&a, 80, 24)"
---
┌ oxidiris.md ─────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                       ▼                                      │
│                                      needs                                   │
│                                       ▲                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│speed: 300 WPM (eff. 210)                                    word: 10/42 (22%)│
│[Space] play   [K / Up] speed   [H / Left] seek   [?] help   [q] quit  ██░░░░░│
└──────────────────────────────────────────────────────────────────────────────┘
