crates/oxidiris/src/snapshots/oxidiris__snapshots__the_anchor_column_holds_across_word_lengths.snap
---
source: crates/oxidiris/src/snapshots.rs
expression: frames
---
       needs |│                  needs               │|
           a |│                   a                  │|
   paragraph |│                 paragraph            │|
        long |│                  long                │|
      enough |│                 enough               │|
          to |│                  to                  │|
       wrap. |│                  wrap.               │|
        Keys |│                  Keys                │|
