crates/oxidiris/src/snapshots/oxidiris__snapshots__the_outline_over_a_narrow_window.snap
---
source: crates/oxidiris/src/snapshots.rs
expression: "text_grid(&a, 60, 20)"
---
┌ oxidiris.md ─────────────────────────────────────────────┐
│                                                          │
│      ┌ Outline  ·  [Enter] jump ─────────────────┐       │
│      │▸ Oxidiris                                 │       │
│      │    Keys                                   │       │
│      │    Limits                                 │       │
│      │                                           │       │
│      │                                           │       │
│      │                                           │       │
│      │                                           │       │
│      │                                           │       │
│      │                                           │       │
│      │                                           │       │
│      │                                           │       │
│      │                                           │       │
└──────│                                           │───────┘
┌──────│                                           │───────┐
│speed:└───────────────────────────────────────────┘2 (22%)│
│OUTLINE   [J / Down] scroll   [Tab] back   [?] help   [q] │
└──────────────────────────────────────────────────────────┘
