crates/oxidiris/src/snapshots/oxidiris__snapshots__the_outline_sidebar.snap
---
source: crates/oxidiris/src/snapshots.rs
expression: "text_grid(&a, 100, 24)"
---
┌ Outline  ·  [Ente┐┌ oxidiris.md ─────────────────────────┐┌ Text  ·  [Tab] to scroll ────────────┐
│▸ Oxidiris        ││                                      ││# Oxidiris                            │
│    Keys          ││                                      ││                                      │
│    Limits        ││                                      ││Reading at speed without moving your e│
│                  ││                                      ││which needs a paragraph long enough to│
│                  ││                                      ││                                      │
│                  ││                                      ││## Keys                               │
│                  ││                                      ││                                      │
│                  ││                   ▼                  ││- Space plays and pauses              │
│                  ││                  needs               ││- Tab focuses the text panel          │
│                  ││                   ▲                  ││                                      │
│                  ││                                      ││```rust                               │
│                  ││                                      ││let anchor = width / 2;               │
│                  ││                                      ││```                                   │
│                  ││                                      ││                                      │
│                  ││                                      ││## Limits                             │
│                  ││                                      ││                                      │
│                  ││                                      ││Skimming and triage, not a replacement│
│                  ││                                      ││careful reading.                      │
└──────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│speed: 300 WPM (eff. 210)                                                        word: 10/42 (22%)│
│OUTLINE   [J / Down] scroll   [Tab] back   [?] help   [q] quit  ███████░░░░░░░░░░░░░░░░░░░░░░░░░░░│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
